--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # SECURITY CONFIGURATION
 # ==================================
 TOKEN=RANDOM_STRING_HERE
-PROTECT_ROUTES=false
+PROTECT_ROUTES=true
 
 # ==================================
 # APPLICATION CONFIGURATION
@@ -15,7 +15,7 @@ LOG_LEVEL=silent
 # ==================================
 # BROWSER CONFIGURATION
 # ==================================
-CLIENT_PLATFORM='Whatsapp MD'
+CLIENT_PLATFORM='Whatsapp Pao Diario'
 CLIENT_BROWSER='Chrome'
 CLIENT_VERSION='4.0.0'
 
@@ -27,7 +27,7 @@ INSTANCE_MAX_RETRY_QR=2
 # ==================================
 # DATABASE CONFIGURATION
 # ==================================
-MONGODB_ENABLED=false
+MONGODB_ENABLED=true
 MONGODB_URL=mongodb://127.0.0.1:27017/whatsapp_api
 
 # ==================================
